packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/route-warnings.stderr
error: checking for warnings!
  --> $DIR/route-warnings.rs:25:5
   |
25 |     compile_error!("checking for warnings!")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
